--- a/browser_action.html
+++ b/browser_action.html
@@ -13,5 +13,5 @@
 
 <div id="mainPopup">
 <button>
-	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none">Google Docs</a>
+	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none">My Hotlist</a>
 </div>
