--- a/browser_action.html
+++ b/browser_action.html
@@ -9,6 +9,11 @@
 	h1 {
 		font-size: 2em;
 	}
+	  button {
+          height: 30px;
+          width: 30px;
+          outline: none;
+        }
 </style>
 
 <div id="mainPopup">
