--- a/browser_action.html
+++ b/browser_action.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<style type="text/css">
+<html><head><style type="text/css">
 	#mainPopup {
 		padding: 10px;
 		height: 200px;
@@ -11,12 +10,13 @@
 	}
 	  button {
           height: 30px;
-          width: 30px;
+          width: 45px;
           outline: none;
         }
 </style>
 
-<div id="mainPopup">
+</head><body><div id="mainPopup">
 <button>
 	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none">My Hotlist</a>
-</div>
+</button></div>
+</body></html>
