--- a/browser_action.html
+++ b/browser_action.html
@@ -1,16 +1,11 @@
 <html><head><style type="text/css">
 	#mainPopup {
 		padding: 10px;
-		height: 200px;
-		width: 400px;
 		font-family: Helvetica, Ubuntu, Arial, sans-serif;
 	}
-	h1 {
-		font-size: 2em;
-	}
 	  button {
-          height: 30px;
-          width: 45px;
+          height: auto;
+          width: auto;
           outline: none;
         }
 </style>
