--- a/browser_action.html
+++ b/browser_action.html
@@ -1,6 +1,8 @@
 <html><head><style type="text/css">
 	#mainPopup {
-		padding: 10px;
+		padding: 5px;
+		height: auto;
+		width: auto;
 		font-family: Helvetica, Ubuntu, Arial, sans-serif;
 	}
 	  button {
