--- a/browser_action.html
+++ b/browser_action.html
@@ -14,6 +14,6 @@
 
 </head><body><div id="mainPopup">
 <button>
-	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none">My Hotlist</a>
+	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none;color:black">My Hotlist</a>
 </button></div>
 </body></html>
