--- a/browser_action.html
+++ b/browser_action.html
@@ -1,4 +1,6 @@
-<html><head><style type="text/css">
+<html>
+	<head>
+		<style type="text/css">
 	#mainPopup {
 		padding: 5px;
 		height: auto;
@@ -12,8 +14,12 @@
         }
 </style>
 
-</head><body><div id="mainPopup">
+</head>
+	<body background="Wood.jpeg">
+	<div id="mainPopup">
 <button>
 	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none;color:black">My Hotlist</a>
-</button></div>
-</body></html>
+</button>
+		</div>
+</body>
+</html>
