--- a/browser_action.html
+++ b/browser_action.html
@@ -15,7 +15,7 @@
 </style>
 
 </head>
-	<body background="Wood.jpeg">
+	<body background="icons/Wood.jpeg">
 	<div id="mainPopup">
 <button>
 	<a href="https://jameshotlist.tk/" rel="noopener noreferrer" target="_blank" style="text-decoration: none;color:black">My Hotlist</a>
